welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:16: error: ';' expected but integer literal found.
     														 rerturn 1;
                                                                                                                         ^